--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     <div class="container text-foot text-center">
         <p class="mb-0 text-white-50">©
             <script>document.write(new Date().getFullYear())</script>
-            Артур <img class="heart" src="/images/heart.svg"></p>
+            Артур </p>
     </div><!--end container-->
 </footer><!--end footer-->
 <!-- Footer End -->
