--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     </div>
                     <div class="content mt-4">
                         <h5 class="title">Телефон</h5>
-                        <a href="tel:+905488659956" class="text-primary">+7 (927) 200-89-43</a>
+                        <a href="tel:+79272008943" class="text-primary">+7 (927) 200-89-43</a>
                     </div>
                 </div>
             </div><!--end col-->
@@ -343,7 +343,7 @@
                     </div>
                     <div class="content mt-4">
                         <h5 class="title">Email</h5>
-                        <a href="mailto:6660467@gmail.com<" class="text-primary">xomail24@gmail.com</a>
+                        <a href="mailto:xomail24@gmail.com<" class="text-primary">xomail24@gmail.com</a>
                     </div>
                 </div>
             </div><!--end col-->
@@ -351,11 +351,11 @@
             <div class="col-md-4 mt-4 pt-2">
                 <div class="contact-detail text-center">
                     <div class="icon">
-                        <i data-feather="map-pin" class="fea icon-md"></i>
+                        <img src="images/Teleg.svg" class="fea icon-md" alt="">
                     </div>
                     <div class="content mt-4">
-                        <h5 class="title">Локация</h5>
-                        <p class="text-light-muted">Россия, Москва</p>
+                        <h5 class="title">Telegram</h5>
+                        <a href="https://t.me/Tomilin_A" class="text-primary">@Tomilin_A</a>
                     </div>
                 </div>
             </div><!--end col-->
