--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <head>
     <meta charset="utf-8"/>
-    <title>Сайт-визитка Артур</title>
+    <title>Артур Томилин</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon -->
     <link rel="shortcut icon" href="images/favicon.ico">
