--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <div class="col-md-4 mt-4 pt-2">
                 <div class="contact-detail text-center">
                     <div class="icon">
-                        <img src="images/Teleg.svg" class="fea icon-md" alt="">
+                        <img src="images/Teleg.png" class="fea icon-md" alt="">
                     </div>
                     <div class="content mt-4">
                         <h5 class="title">Telegram</h5>
